# antigravity-trajectory-extractor

./: .gitignore  .pre-commit-config.yaml  README.md  README.zh-CN.md  pyproject.toml
src/antigravity_trajectory/: __init__.py  cli.py  extractor.py
tests/: test_extractor.py
