[project]
name = "antigravity-trajectory-extractor"
version = "0.1.0"
description = "Export Antigravity trajectories via live local RPC with cache-backed session discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
antigravity-trajectory = "antigravity_trajectory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antigravity_trajectory"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["antigravity_trajectory"]

[dependency-groups]
dev = ["ruff>=0.15.6"]
